Fix mobile horizontal overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,6 +53,7 @@ html {
 html,
 body {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
